# sugarglider

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python.yml
apps/api/: Dockerfile
assets/brand/: README.md
docs/: pr14-acceptance.md  pr14-scope.md  pr15-routing-profiles.md  pr16-best-effort-constraints.md  pr17-route-direction.md  pr19-spur-diagnostics.md  pr20-spur-closure-repair.md
examples/marly/: all-pois-best-effort-generation-request.json  all-pois-generation-request.json  auto-tour-request.json  bastille-22-places-auto-tour.json  bastille-to-marly-22-places-auto-tour.json  bastille-to-marly-auto-tour.json  generation-request.json  request.json
examples/profiles/: city-bike-open.json  gravel-bike-loop.json  hike-loop.json  mountain-bike-loop.json  road-bike-open.json  trail-run-loop.json
infrastructure/graphhopper/: Dockerfile  config.yml  entrypoint.sh
scripts/: benchmark_loop_geometry.py  benchmark_nature_analysis.py  benchmark_poi_index.py  build_nature_index.sh  build_poi_index.sh  compare_marly_loop_geometry.py  compare_routing_profiles.py  download_osm.sh  generate_marly.sh  generate_marly_all_pois.sh  generate_marly_auto_tour.sh  migrate_plan_json.py  prepare_plan_gpx.py  rebuild_graph_cache.sh  report_marly.sh  run_gui.sh  smoke_marly.sh  sync_web_brand_assets.py
src/sugarglider/: __init__.py  config.py  migrate_plan_json.py
tests/: conftest.py
tests/integration/: test_graphhopper_live.py
tests/unit/: test_api.py  test_architecture.py  test_auto_tour_api.py  test_auto_tour_pois.py  test_auto_tour_scoring.py  test_auto_tour_service.py  test_auto_tour_skeletons.py  test_backtracking.py  test_config.py  test_constraint_resolver.py  test_direction.py  test_endpoints.py  test_generate_marly_script.py  test_generation_geometry.py  test_generation_models.py  test_generation_ordering.py  test_generation_scoring.py  test_generation_service.py  test_generation_signatures.py  test_gpx_writer.py  test_graphhopper_client.py  test_isochrone_client.py  test_loop_geometry.py  test_loop_geometry_ranking.py  test_low_overlap.py  test_models.py  test_nature_analysis.py  test_nature_build.py  (+19 more)
(+140 files in other folders)
