[project]
name = "sugarglider"
version = "0.1.0"
description = "Route ordered trail anchors on OpenStreetMap paths and export clean GPX tracks."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "shapely>=2.1,<3",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
sugarglider-migrate-plan = "sugarglider.migrate_plan_json:main"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "osmium>=4.3,<5",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "types-shapely>=2.1,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sugarglider"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["integration: requires a live GraphHopper instance"]
testpaths = ["tests"]
